# mousefood

./: .editorconfig  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  BREAKING-CHANGES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  cliff.toml  sdkconfig.defaults
.github/: FUNDING.yml
.github/workflows/: ci.yml  release-plz.yml
examples/: simulator.rs
examples/demo/: Cargo.toml
examples/epd-waveshare-demo/: Cargo.toml
examples/epd-waveshare-demo/src/: main.rs
examples/esp32-no-std-demo/: .clippy.toml  Cargo.toml
examples/esp32-no-std-demo/.cargo/: config.toml
examples/esp32-no-std-demo/src/: button.rs  chart.rs  gauge.rs  main.rs  ratatui_logo.rs  tabs.rs  voltage.rs
examples/esp32-std-demo/: Cargo.toml  sdkconfig.defaults
examples/esp32-std-demo/.cargo/: config.toml
examples/esp32-std-demo/src/: helpers.rs  ratatui_logo.rs  tabs.rs  voltage.rs
examples/mousefood-esp32-std-demo/: Cargo.toml
examples/mousefood-esp32-std-demo/.cargo/: config.toml
examples/mousefood-esp32-std-demo/src/: chart.rs  gauge.rs  main.rs  ratatui_logo.rs  tabs.rs  voltage.rs
examples/simulator/: Cargo.toml  README.md  readme.md
examples/simulator/src/: main.rs
mousefood/: Cargo.toml
mousefood/src/: backend.rs  buffered_display.rs  colors.rs  error.rs  framebuffer.rs  lib.rs  prelude.rs
src/: backend.rs  colors.rs  framebuffer.rs  lib.rs
