[workspace]
resolver = "3"
members = [
  ".",
  "examples/*",
]

[package]
name = "mousefood"
description = "embedded-graphics backend for Ratatui"
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/j-g00da/mousefood"
repository = "https://github.com/j-g00da/mousefood"
keywords = ["embedded-graphics", "ratatui", "tui"]
categories = ["embedded"]
exclude=["/.github", "/assets"]

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["all-widgets"] }
embedded-graphics = "0.8.1"
embedded-graphics-unicodefonts = { version = "0.1.0", optional = true }
weact-studio-epd = { version = "0.1.2", features = ["blocking"], optional = true }

[dev-dependencies]
rstest = "0.25.0"
paste = "1.0.15"

[features]
default = ["fonts"]
fonts = ["dep:embedded-graphics-unicodefonts"]
epd-weact = ["dep:weact-studio-epd"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"
