[workspace]
resolver = "3"
members = ["mousefood", "examples/*"]
default-members = ["mousefood"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/j-g00da/mousefood"
repository = "https://github.com/j-g00da/mousefood"
keywords = ["embedded-graphics", "ratatui", "tui"]
categories = ["embedded"]
exclude = ["/.github", "/assets"]

[workspace.dependencies]
ratatui = { version = "0.30.0-alpha.4", default-features = false }
